--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ anyhow = { version = "1.0.66", features = ["backtrace"] }
 chrono = "0.4.22"
 clap = { version = "4.0.19", features = ["derive", "env"] }
 clap_derive = { version = "4.0.18", features = ["debug"] }
+html2md = "0.2.13"
 reqwest = { version = "0.11.12", features = ["cookies"] }
 tokio = { version = "1.21.2", features = ["full"] }
