--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ clap_derive = { version = "4.0.18", features = ["debug"] }
 html2md = "0.2.13"
 reqwest = { version = "0.11.12", features = ["cookies"] }
 tokio = { version = "1.21.2", features = ["full"] }
+handlebars = "4.3.5"
