add support for cargo workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ html2md = "0.2.13"
 reqwest = { version = "0.11.12", features = ["cookies"] }
 tokio = { version = "1.21.2", features = ["full"] }
 handlebars = "4.3.5"
+toml_edit = { version = "0.15.0", features = ["easy", "perf"] }
